[gd_scene load_steps=12 format=3 uid="uid://dx4hrv5p7ak0j"]

[ext_resource type="Script" uid="uid://c3u0gf44870nj" path="res://scripts/player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://m16xjqh6m2vr" path="res://textures/little-guy.png" id="2_g2els"]

[sub_resource type="Animation" id="Animation_dqkch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "blink"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "land"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "move"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "player_anims"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_dqkch"),
&"blink": SubResource("Animation_smehm"),
&"idle": SubResource("Animation_tuyoq"),
&"jump": SubResource("Animation_qlg0r"),
&"land": SubResource("Animation_fjrip"),
&"move": SubResource("Animation_qhqgy"),
&"player_anims": SubResource("Animation_g2els")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(32, 32)

[node name="Player" type="Node2D" node_paths=PackedStringArray("charbod")]
script = ExtResource("1_4flbx")
charbod = NodePath("CharacterBody2D")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(3.57628e-07, 2.44379e-06)
texture = ExtResource("2_g2els")
hframes = 4
vframes = 5
frame = 8

[node name="PlayerAnim" type="AnimationPlayer" parent="CharacterBody2D/Sprite2D"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}

[node name="PlayerAnimTimer" type="Timer" parent="CharacterBody2D/Sprite2D"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_onrkg")

[connection signal="timeout" from="CharacterBody2D/Sprite2D/PlayerAnimTimer" to="." method="_on_player_anim_timer_timeout"]
